@@ -87,6 +87,7 @@ import ortus.boxlang.runtime.scopes.Key;
 import ortus.boxlang.runtime.services.ModuleService;
 import ortus.boxlang.runtime.types.IStruct;
 import ortus.boxlang.runtime.types.Struct;
+import ortus.boxlang.runtime.types.util.ListUtil;
 import ortus.boxlang.runtime.util.RegexBuilder;
 
 /**
@@ -654,13 +655,80 @@ public class CFTranspilerVisitor extends ReplacingBoxVisitor {
 		if ( BIFReturnTypeFixSet.contains( name ) && returnValueIsUsed( node ) ) {
 			return transpileBIFReturnType( node, name );
 		}
-		// look for rewritten variable names passed to insDefined()
+		// look for listAppend() so we can default includeEmptyFields to true
+		if ( name.equals( "listappend" ) ) {
+			return transpileListAppend( node );
+		}
+		// look for rewritten variable names passed to isDefined()
 		if ( name.equals( "isdefined" ) && node.getArguments().size() > 0 && node.getArguments().get( 0 ).getValue() instanceof BoxStringLiteral bsl ) {
 			identifierMap.entrySet().stream().forEach( e -> {
 				bsl.setValue( replaceIdentifiersInString( bsl.getValue(), e.getKey(), e.getValue() ) );
 			} );
 		}
 
+		// swap "once" for "one"
+		// Only handling position args for now. We can add named arg support later if needed.
+		if ( ( name.equals( "replacenocase" ) || name.equals( "replace" ) || name.equals( "rereplace" ) || name.equals( "rereplacenocase" ) )
+		    && node.getArguments().size() > 3
+		    && node.getArguments().get( 0 ).getName() == null ) {
+			if ( node.getArguments().get( 3 ).getValue() instanceof BoxStringLiteral bsl ) {
+				String val = bsl.getValue().toLowerCase();
+				if ( val.equals( "once" ) ) {
+					bsl.setValue( "one" );
+				}
+			}
+		}
+
+		return super.visit( node );
+	}
+
+	private BoxNode transpileListAppend( BoxFunctionInvocation node ) {
+		var args = node.getArguments();
+		if ( args.isEmpty() ) {
+			return super.visit( node );
+		}
+		// Check if named args
+		if ( args.get( 0 ).getName() != null ) {
+			// named args
+			boolean hasIncludeEmptyFields = args.stream().anyMatch( a -> a.getName().getAsSimpleValue().toString().equalsIgnoreCase( "includeEmptyFields" ) );
+			if ( !hasIncludeEmptyFields ) {
+				args.add(
+				    new BoxArgument(
+				        new BoxStringLiteral( "includeEmptyFields", null, null ),
+				        new BoxBooleanLiteral( true, null, null ),
+				        null,
+				        null
+				    )
+				);
+				node.setArguments( args );
+			}
+		} else {
+			// positional args
+			if ( args.size() < 4 ) {
+				if ( args.size() == 2 ) {
+					// add delimiter as 3rd positional arg
+					args.add(
+					    new BoxArgument(
+					        null,
+					        new BoxStringLiteral( ListUtil.DEFAULT_DELIMITER, null, null ),
+					        null,
+					        null
+					    )
+					);
+				}
+				// add includeEmptyFields as 4th positional arg
+				args.add(
+				    new BoxArgument(
+				        null,
+				        new BoxBooleanLiteral( true, null, null ),
+				        null,
+				        null
+				    )
+				);
+				// Always re-set args and don't just modify the list so the AST model can be updated
+				node.setArguments( args );
+			}
+		}
 		return super.visit( node );
 	}
 
@@ -1242,6 +1310,18 @@ public class CFTranspilerVisitor extends ReplacingBoxVisitor {
 				    bsl.setValue( newValue );
 			    } );
 		}
+		// Ignore invalid values for cfquery dbtype. If it's a string literal, and not query or hql, then literally delete the attribute entirely
+		if ( componentName.equals( "query" ) ) {
+			node.getAttributes()
+			    .stream()
+			    .filter( a -> a.getKey().getValue().equalsIgnoreCase( "dbtype" ) && a.getValue() instanceof BoxStringLiteral )
+			    .filter( a -> {
+				    String value = ( ( BoxStringLiteral ) a.getValue() ).getValue();
+				    return !value.equalsIgnoreCase( "query" ) && !value.equalsIgnoreCase( "hql" );
+			    } )
+			    .toList()
+			    .forEach( a -> node.getAttributes().remove( a ) );
+		}
 		return super.visit( node );
 	}
 
@@ -1389,7 +1469,7 @@ public class CFTranspilerVisitor extends ReplacingBoxVisitor {
 		if ( isClass ) {
 			BoxExpression expr = node.getExpression();
 			// only contains white space
-			if ( expr instanceof BoxStringLiteral str && str.getValue().trim().isEmpty() ) {
+			if ( expr instanceof BoxStringLiteral str && str.getValue().isBlank() ) {
 				if ( node.getFirstAncestorOfType( BoxTemplateIsland.class ) == null
 				    // This is prolly not comprehensive. Maybe there's a better approach, but let's try to detect if we're in a componenet that's actually outputting something
 				    // The main problem here is that any whitespace COULD POTENTIALLY be significant depending on what the code is doing.
